testsuite/poke.pkl/gt-integers-diag-1.pk
/* { dg-do compile } */

var a =
  1 > 3#B; /* { dg-error "invalid operand.*\n.*expected integral" } */
